--- a/oauth2-client/pom.xml
+++ b/oauth2-client/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- 默认版本5.1.5-->
       <dependency>
             <groupId>org.springframework.boot</groupId>
